--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -18,11 +18,17 @@
 
     <!-- Links -->
     <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="/loginForm">Login</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">회원 정보</a>
+        {{#username}}
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+            </li>
+        {{/username}}
+        {{^username}}
+            <li class="nav-item">
+                <a class="nav-link" href="/loginForm">Login</a>
+            </li>
+        {{/username}}
+            <a class="nav-link" href="/userInfo">회원 정보</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">To_Do_List</a>
