--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -31,7 +31,14 @@
             <a class="nav-link" href="/userInfo">회원 정보</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">To_Do_List</a>
+            <a class="nav-link" href="/todolist">To_Do_List</a>
         </li>
+        {{#username}}
+        {{/username}}
+        {{^username}}
+            <li class="nav-item">
+                <a class="nav-link" href="/join">회원가입</a>
+            </li>
+        {{/username}}
     </ul>
 </nav>
