--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title>Check Study</title>
     <meta charset="utf-8">
@@ -25,13 +25,13 @@
         {{/username}}
         {{^username}}
             <li class="nav-item">
-                <a class="nav-link" href="/loginForm">Login</a>
+                <a class="nav-link" href="/loginForm?first=1">Login</a>
             </li>
         {{/username}}
             <a class="nav-link" href="/userInfo">회원 정보</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/todolist">To_Do_List</a>
+            <a class="nav-link" href="/todolist/proceeding">To_Do_List</a>
         </li>
         {{#username}}
         {{/username}}
