--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -33,6 +33,9 @@
         <li class="nav-item">
             <a class="nav-link" href="/todolist/proceeding?page=0">To_Do_List</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/todolist/success?page=0">Success_List</a>
+        </li>
         {{#username}}
         {{/username}}
         {{^username}}
