--- a/src/main/resources/templates/task/taskDetail.mustache
+++ b/src/main/resources/templates/task/taskDetail.mustache
@@ -10,6 +10,7 @@
     <hr/>
     <div>{{{task.content}}}</div>
     <input type="hidden" value="{{task.id}}" id="id"/>
+    <input type="hidden" value="{{task.isSuccess}}" id="isSuccess">
     <hr/>
     <div class="feedback">
         <div class="row">
@@ -18,9 +19,14 @@
             </div>
             <button class="btn btn-primary">작성</button><br/>
         </div>
-        <div class="feedbackList">
-            <div>
-
+        <br>
+        <div class="card">
+            <div class="card-header d-flex justify-content-center">Feedback List</div>
+            <div class="list-group">
+                <div class="list-group-item d-flex justify-content-between">
+                    <div>hello</div>
+                    <button class="btn btn-dark badge">댓글 삭제</button>
+                </div>
             </div>
         </div>
     </div>
@@ -28,11 +34,16 @@
     <div class="d-flex flex-row-reverse">
         <button id="btn-delete" class="btn btn-danger">삭제</button>
         <p>&nbsp;</p>
-        <a href="#"><button class="btn btn-info">수정하기</button></a>
+        <a href="/task/update/{{task.id}}"><button class="btn btn-info">수정하기</button></a>
         <p>&nbsp;</p>
         <button class="btn btn-secondary" onclick="history.back()">뒤로가기</button>
         <p>&nbsp;</p>
-        <a href="#"><button class="btn btn-primary">완료</button></a>
+        {{#isSuccess}}
+            <button class="btn btn-danger" id="btn-success">완료취소</button>
+        {{/isSuccess}}
+        {{^isSuccess}}
+            <button class="btn btn-primary" id="btn-success">완료</button>
+        {{/isSuccess}}
     </div>
 </div>
 <script src="/js/task.js"></script>
