--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Check Study</title>
+    <title>Study Mate</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -28,10 +28,11 @@
                 <a class="nav-link" href="/loginForm/1">Login</a>
             </li>
         {{/username}}
+        <li class="nav-item">
             <a class="nav-link" href="/userInfo">회원 정보</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/todolist/proceeding?page=0">To_Do_List</a>
+            <a class="nav-link" href="/todolist/proceeding?page=0">ToDo_List</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/todolist/success?page=0">Success_List</a>
@@ -43,5 +44,6 @@
                 <a class="nav-link" href="/join">회원가입</a>
             </li>
         {{/username}}
+
     </ul>
 </nav>
